--- a/wwwroot/customcredentials.html
+++ b/wwwroot/customcredentials.html
@@ -47,7 +47,7 @@
     </div>
     <script>
       window.onload= () => {
-        let callbackURL = window.location.origin + '/api/auth/callback';
+        let callbackURL = window.location.origin.replace('https','http') + '/api/auth/callback';
         document.getElementById("callbackurl").innerHTML = callbackURL;
         document.getElementById("callbackurl").value = callbackURL;
         document.getElementById("signincustom").onclick = () => {
