--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -56,7 +56,7 @@
     </div>
     <div id="iteminput" data-balloon-length="fit"
       aria-label="Here goes an fileVersionUrn like urn:adsk.wipprod:dm.lineage..." data-balloon-pos="down">
-      <input type="text" placeholder="fileVersionUrn here" id="modelurn" />
+      <input class="h100" type="text" placeholder="fileVersionUrn here" id="modelurn" />
     </div>
     <div class="form-check form-switch form-switch-sm">
       <input class="form-check-input" type="checkbox" id="toggleviewer">
